# serverless-lambda-s3-trial

./: .gitignore  README.md
go/: Makefile  go.mod  go.sum  package-lock.json  serverless.yml
go/entry/: main.go
go/read-write/: main.go  structs.go
python3/: .gitignore  package-lock.json  pyproject.toml
python3/python3_s3/: handler.py
